# kinextract

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: README.md  calibrate_xlam.py  mock_spectrum.py  report.py  run_suite.py  scenarios.py  score.py  step_by_step_pipeline_walkthrough.ipynb
benchmarks/reports/: stress_test_report.ipynb
dev_notes/: broad_sigma_stress_test_log.md  emiles_rollback_todo.md  nbins_xlam_regression_history.md  real_data_validation_muse_stis.md  v_bias_remediation_plan.md
dev_notes/stress_test/: compare_kinextract_ppxf.py  coverage_test.py  diag_grid_centering.py  diag_multistart.py  diag_perfect_recenter.py  diag_raw_vs_gh.py  diag_raw_vs_gh2.py  diag_template_count.py  diag_true_init.py  diag_v_offset.py  diag_vcenter.py  harness.py  harness_emiles.py  harness_emiles_broad.py  ppxf_compare.py  prepare_emiles.py  results_baseline_gk.json  results_broad_mock_sweep.json  results_coverage.json  results_emiles.json  results_final_widewindow.json  results_giants_only.json  results_kinextract_vs_ppxf.json  results_nbins89_sweep_recalibrated.json  results_nbins_sweep.json  results_nbins_sweep_revalidate.json  results_recenter_v_sweep.json  results_xlam_criterion_sweep.json  sweep_broad_mock.py  sweep_nbins.py  sweep_nbins89_recalibrated.py  sweep_nbins_revalidate.py  sweep_recenter_v.py  sweep_xlam_criterion.py
docs/: api.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  kinextract.config
examples/greatlakes_scripts/: binspectra  boost_errors  checktrimlist  cleanslurm  combine_runs  finalizeextraction  fix_losvd_errs.py  gden  gdenconv  getveloff  initialize_directory_structure  jobsplitter  jobstats  kinematicextraction  kinextract.config  kinextract.templates.slurm  library.x  makeallcres  makebins_stis.py  makebinsstis  makemodelgrid  model.x  modelgrid.py  npdyn  pallmc  pfitlove  plot.libsos.x  plotbin3  prepvlook  pspecfit  rawk  rcomb  rftoa  rgden  rgdenconv  rimfit  rmodel  rnpdyn  rplotbin3  rtransvd  (+17 more)
examples/notebooks/: 01_basic_mock_fit.ipynb  02_realistic_mock_fit.ipynb  kinextract.mplstyle  (+7 more)
tests/: conftest.py  test_config.py  test_continuum.py  test_errors.py  test_fitting.py  test_joint_continuum.py  test_losvd.py  test_masking.py  test_mock_spectrum.py  test_numerics.py  test_regression.py  test_regression_convergence.py  test_templates.py  test_validation.py
(+50 files in other folders)
