[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinextract"
version = "0.2.1"
description = "Non-parametric binned-LOSVD spectral fitter for galaxy kinematics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thomas K. Waters", email = "waterstk@umich.edu" },
]
keywords = ["astronomy", "spectroscopy", "kinematics", "LOSVD", "galaxies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tomli>=2.0; python_version < '3.11'",
    "numba>=0.57",
    "jax[cpu]>=0.4",
    "threadpoolctl>=3.0",
]

[project.optional-dependencies]
bayesian = [
    "numpyro>=0.21",
]
lines = [
    "astroquery>=0.4",
    "astropy>=5.0",
]
benchmarks = [
    "pandas>=2.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
kinextract = "kinextract.__main__:main"

[project.urls]
"Homepage" = "https://github.com/thomas-k-waters/kinextract"
"Bug Tracker" = "https://github.com/thomas-k-waters/kinextract/issues"
"Documentation" = "https://kinextract.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "slow: marks tests that run long fits (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 (line too long): line-length is enforced at 99 above, long lines are
# usually URLs/long strings not worth wrapping.
# E702 (multiple statements on one line via ';'): used deliberately in the
# numerics-heavy modules (continuum.py, errors.py, losvd.py, numerics.py) to
# keep tightly-related paired assignments (e.g. "value = ...; index += n")
# visually grouped on one line.
ignore = ["E501", "E702"]
